PROJECT(Level)
FILE(GLOB project_headers *.h)
FILE(GLOB project_sources *.cc)

SET(files_project ${project_headers} ${project_sources})
SOURCE_GROUP("Level" FILES ${files_project})
ADD_EXECUTABLE(Level 2DLevel.cpp)
target_link_libraries(Level PRIVATE exts)
IF(MSVC)
    set_property(TARGET Level PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
ENDIF()